fix: checkbox/radiobutton border is not visible when exported to PDF in IE

--- a/styles/web/common/base.less
+++ b/styles/web/common/base.less
@@ -862,6 +862,8 @@ input.k-checkbox,
    vertical-align: text-top;
    line-height: 16px;
    cursor: pointer;
+   border-style: solid;
+   border-width: 0;
 }
 
 .k-checkbox-label:before {
